--- a/算法-代码随想录.md
+++ b/算法-代码随想录.md
@@ -324,3 +324,149 @@ class Solution {
 }
 ```
 
+两两交换链表中的节点：
+
+使用虚拟头结点，然后创建一个新节点指向该虚拟头结点进行操作。
+
+操作流程
+
+![24.两两交换链表中的节点1](https://code-thinking.cdn.bcebos.com/pics/24.%E4%B8%A4%E4%B8%A4%E4%BA%A4%E6%8D%A2%E9%93%BE%E8%A1%A8%E4%B8%AD%E7%9A%84%E8%8A%82%E7%82%B91.png)
+
+这时每次记录要放置到前面的节点的前一个与后一个节点，每次需要操作的是头结点后的两个节点因此需要判断next与next.next不为空然后cur后移两位
+
+删除链表的倒数第N个节点:
+
+使用双指针加虚拟头结点
+
+```java
+class Solution {
+    public ListNode removeNthFromEnd(ListNode head, int n) {
+        //新建一个虚拟头节点指向head
+        ListNode dummyNode = new ListNode(0);
+        dummyNode.next = head;
+        //快慢指针指向虚拟头节点
+        ListNode fastIndex = dummyNode;
+        ListNode slowIndex = dummyNode;
+
+        // 只要快慢指针相差 n 个结点即可
+        for (int i = 0; i <= n; i++) {
+            fastIndex = fastIndex.next;
+        }
+        while (fastIndex != null) {
+            fastIndex = fastIndex.next;
+            slowIndex = slowIndex.next;
+        }
+
+        // 此时 slowIndex 的位置就是待删除元素的前一个位置。
+        // 具体情况可自己画一个链表长度为 3 的图来模拟代码来理解
+        // 检查 slowIndex.next 是否为 null，以避免空指针异常
+        if (slowIndex.next != null) {
+            slowIndex.next = slowIndex.next.next;
+        }
+        return dummyNode.next;
+    }
+}
+```
+
+链表相交：
+
+求出插值然后同时移动判断相等
+
+```java
+(版本一)先行移动长链表实现同步移动
+public class Solution {
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+        ListNode curA = headA;
+        ListNode curB = headB;
+        int lenA = 0, lenB = 0;
+        while (curA != null) { // 求链表A的长度
+            lenA++;
+            curA = curA.next;
+        }
+        while (curB != null) { // 求链表B的长度
+            lenB++;
+            curB = curB.next;
+        }
+        curA = headA;
+        curB = headB;
+        // 让curA为最长链表的头，lenA为其长度
+        if (lenB > lenA) {
+            //1. swap (lenA, lenB);
+            int tmpLen = lenA;
+            lenA = lenB;
+            lenB = tmpLen;
+            //2. swap (curA, curB);
+            ListNode tmpNode = curA;
+            curA = curB;
+            curB = tmpNode;
+        }
+        // 求长度差
+        int gap = lenA - lenB;
+        // 让curA和curB在同一起点上（末尾位置对齐）
+        while (gap-- > 0) {
+            curA = curA.next;
+        }
+        // 遍历curA 和 curB，遇到相同则直接返回
+        while (curA != null) {
+            if (curA == curB) {
+                return curA;
+            }
+            curA = curA.next;
+            curB = curB.next;
+        }
+        return null;
+    }
+
+}
+
+(版本二) 合并链表实现同步移动
+public class Solution {
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+		// p1 指向 A 链表头结点，p2 指向 B 链表头结点
+		ListNode p1 = headA, p2 = headB;
+		while (p1 != p2) {
+			// p1 走一步，如果走到 A 链表末尾，转到 B 链表
+			if (p1 == null) p1 = headB;
+			else            p1 = p1.next;
+			// p2 走一步，如果走到 B 链表末尾，转到 A 链表
+			if (p2 == null) p2 = headA;
+			else            p2 = p2.next;
+		}
+		return p1;
+    }
+}
+```
+
+环形链表II：
+
+使用快慢指针（随想录详细解释）
+
+```java
+public class Solution {
+
+  public ListNode detectCycle(ListNode head) {
+ListNode slow=head;
+ListNode fast=head;
+while(fast!=null&&fast.next!=null)
+{
+ slow=slow.next;
+ fast=fast.next.next;
+if(slow==fast)
+ {
+ ListNode index1=fast;
+ ListNode index2=head;
+ while(index1!=index2)
+ {
+  index1=index1.next;
+  index2=index2.next;
+ }
+  return index1;
+    }
+   }
+ return null;
+
+  }
+
+}
+```
+
