第三次提交

--- a/算法-代码随想录.md
+++ b/算法-代码随想录.md
@@ -1304,3 +1304,1325 @@ class Solution {
     }
 }
 ```
+
+# 双指针法
+
+# 栈与队列
+
+栈提供push 和 pop 等等接口，所有元素必须符合先进后出规则，所以栈不提供走访功能，也不提供迭代器(iterator)。 不像是set 或者map 提供迭代器iterator来遍历所有元素。
+
+## 用栈实现队列
+
+取队列元素先将进栈元素全部放到出栈元素中
+
+```java
+class MyQueue {
+
+    Stack<Integer> stackIn;
+    Stack<Integer> stackOut;
+
+    /** Initialize your data structure here. */
+    public MyQueue() {
+        stackIn = new Stack<>(); // 负责进栈
+        stackOut = new Stack<>(); // 负责出栈
+    }
+    
+    /** Push element x to the back of queue. */
+    public void push(int x) {
+        stackIn.push(x);
+    }
+    
+    /** Removes the element from in front of queue and returns that element. */
+    public int pop() {    
+        dumpstackIn();
+        return stackOut.pop();
+    }
+    
+    /** Get the front element. */
+    public int peek() {
+        dumpstackIn();
+        return stackOut.peek();
+    }
+    
+    /** Returns whether the queue is empty. */
+    public boolean empty() {
+        return stackIn.isEmpty() && stackOut.isEmpty();
+    }
+
+    // 如果stackOut为空，那么将stackIn中的元素全部放到stackOut中
+    private void dumpstackIn(){
+        if (!stackOut.isEmpty()) return; 
+        while (!stackIn.isEmpty()){
+                stackOut.push(stackIn.pop());
+        }
+    }
+}
+```
+
+## 用队列模拟栈
+
+```java
+class MyStack {
+
+    Queue<Integer> queue;
+
+    public MyStack() {
+        queue = new LinkedList<>();
+    }
+
+    //每 offer 一个数（A）进来，都重新排列，把这个数（A）放到队列的队首
+    public void push(int x) {
+        queue.offer(x);
+        int size = queue.size();
+        //移动除了 A 的其它数
+        while (size-- > 1)
+            queue.offer(queue.poll());
+    }
+
+    public int pop() {
+        return queue.poll();
+    }
+
+    public int top() {
+        return queue.peek();
+    }
+
+    public boolean empty() {
+        return queue.isEmpty();
+    }
+}
+```
+
+## 有效的括号
+
+判断括号是否有效可能存在的三种问题
+
+第一种情况，字符串里左方向的括号多余了 ，所以不匹配。 ![括号匹配1](https://code-thinking-1253855093.file.myqcloud.com/pics/2020080915505387.png)
+
+第二种情况，括号没有多余，但是 括号的类型没有匹配上。 ![括号匹配2](https://code-thinking-1253855093.file.myqcloud.com/pics/20200809155107397.png)
+
+第三种情况，字符串里右方向的括号多余了，所以不匹配。 ![括号匹配3](https://code-thinking-1253855093.file.myqcloud.com/pics/20200809155115779.png)
+
+相对应的三种情况
+
+第一种情况：已经遍历完了字符串，但是栈不为空，说明有相应的左括号没有右括号来匹配，所以return false
+
+第二种情况：遍历字符串匹配的过程中，发现栈里没有要匹配的字符。所以return false
+
+第三种情况：遍历字符串匹配的过程中，栈已经为空了，没有匹配的字符了，说明右括号没有找到对应的左括号return false
+
+```java
+class Solution {
+
+  public boolean isValid(String s) {
+
+    Deque<Character> deque=new LinkedList<>();//双端队列,相当于栈
+
+    char ch;
+
+    for(int i=0;i<s.length();i++)
+
+    {
+
+      ch=s.charAt(i);
+
+      if(ch=='('){
+
+        deque.push('(');
+
+      }
+
+      else if(ch=='{')
+
+      {
+
+        deque.push('{');   
+
+      }else if(ch=='[')
+
+      {
+
+        deque.push('[');
+
+      }
+
+      else if(ch==')')
+
+      {
+
+         if(deque.isEmpty() || deque.peek()!='(')return false;//注意在这里可能存在空的情况
+
+         else deque.poll();
+
+      }
+
+      else if(ch=='}')
+
+      {
+
+        if(deque.isEmpty() || deque.peek()!='{')return false;
+
+        else deque.poll();
+
+      }
+
+      else if(ch==']')
+
+      {
+
+        if(deque.isEmpty() || deque.peek()!='[')return false;
+
+        else deque.poll();
+
+      }
+    }
+
+    return deque.isEmpty();
+
+
+
+  }
+
+}
+```
+
+## 删除字符串中的所有相邻重复项
+
+```java
+class Solution {
+
+  public String removeDuplicates(String s) {
+
+​    ArrayDeque<Character> deque=new ArrayDeque<>();
+
+​    char ch;
+
+​    for(int i=0;i<s.length();i++)
+
+​    {
+
+​      ch=s.charAt(i);
+
+​      if(deque.isEmpty()||ch!=deque.peek())
+
+​      {
+
+​        deque.push(ch);
+
+​      }else
+
+​      {
+
+​        deque.pop();
+
+​      }
+
+​    }
+
+​    String str="";
+
+​    while(!deque.isEmpty())
+
+​    {
+
+​      str=deque.pop()+str;
+
+​    }
+
+​    return str;
+
+  }
+
+}
+```
+
+## 逆波兰表达式求值
+
+前缀=波兰
+
+后缀=逆波兰
+
+中缀=正常
+
+使用栈进行改变
+
+```java
+class Solution {
+    public int evalRPN(String[] tokens) {
+        Deque<Integer> stack = new LinkedList();
+        for (String s : tokens) {
+            if ("+".equals(s)) {        // leetcode 内置jdk的问题，不能使用==判断字符串是否相等
+                stack.push(stack.pop() + stack.pop());      // 注意 - 和/ 需要特殊处理
+            } else if ("-".equals(s)) {
+                stack.push(-stack.pop() + stack.pop());
+            } else if ("*".equals(s)) {
+                stack.push(stack.pop() * stack.pop());
+            } else if ("/".equals(s)) {
+                int temp1 = stack.pop();
+                int temp2 = stack.pop();
+                stack.push(temp2 / temp1);
+            } else {
+                stack.push(Integer.valueOf(s));
+            }
+        }
+        return stack.pop();
+    }
+}
+```
+
+## 滑动窗口最大值
+
+使用一个单调队列解决该问题，保证每次在队列最前面的是最大值即可
+
+```java
+//解法一
+//自定义数组
+class MyQueue {
+    Deque<Integer> deque = new LinkedList<>();
+    //弹出元素时，比较当前要弹出的数值是否等于队列出口的数值，如果相等则弹出
+    //同时判断队列当前是否为空
+    void poll(int val) {
+        if (!deque.isEmpty() && val == deque.peek()) {
+            deque.poll();
+        }
+    }
+    //添加元素时，如果要添加的元素大于入口处的元素，就将入口元素弹出
+    //保证队列元素单调递减
+    //比如此时队列元素3,1，2将要入队，比1大，所以1弹出，此时队列：3,2
+    void add(int val) {
+        while (!deque.isEmpty() && val > deque.getLast()) {
+            deque.removeLast();
+        }
+        deque.add(val);
+    }
+    //队列队顶元素始终为最大值
+    int peek() {
+        return deque.peek();
+    }
+}
+
+class Solution {
+    public int[] maxSlidingWindow(int[] nums, int k) {
+        if (nums.length == 1) {
+            return nums;
+        }
+        int len = nums.length - k + 1;
+        //存放结果元素的数组
+        int[] res = new int[len];
+        int num = 0;
+        //自定义队列
+        MyQueue myQueue = new MyQueue();
+        //先将前k的元素放入队列
+        for (int i = 0; i < k; i++) {
+            myQueue.add(nums[i]);
+        }
+        res[num++] = myQueue.peek();
+        for (int i = k; i < nums.length; i++) {
+            //滑动窗口移除最前面的元素，移除是判断该元素是否放入队列
+            myQueue.poll(nums[i - k]);
+            //滑动窗口加入最后面的元素
+            myQueue.add(nums[i]);
+            //记录对应的最大值
+            res[num++] = myQueue.peek();
+        }
+        return res;
+    }
+}
+```
+
+## 前k个高频元素
+
+给定一个非空的整数数组，返回其中出现频率前 k 高的元素。
+
+示例 1:
+
+- 输入: nums = [1,1,1,2,2,3], k = 2
+- 输出: [1,2]
+
+示例 2:
+
+- 输入: nums = [1], k = 1
+- 输出: [1]
+
+使用小根堆完成只保持一个k大小的堆进行操作即可，每次将堆顶的元素排出即可
+
+```java
+public int[] topKFrequent2(int[] nums, int k) {
+        Map<Integer,Integer> map = new HashMap<>(); //key为数组元素值,val为对应出现次数
+        for (int num : nums) {
+            map.put(num, map.getOrDefault(num, 0) + 1);
+        }
+        //在优先队列中存储二元组(num, cnt),cnt表示元素值num在数组中的出现次数
+        //出现次数按从队头到队尾的顺序是从小到大排,出现次数最低的在队头(相当于小顶堆)
+        PriorityQueue<int[]> pq = new PriorityQueue<>((pair1, pair2) -> pair1[1] - pair2[1]);
+        for (Map.Entry<Integer, Integer> entry : map.entrySet()) { //小顶堆只需要维持k个元素有序
+            if (pq.size() < k) { //小顶堆元素个数小于k个时直接加
+                pq.add(new int[]{entry.getKey(), entry.getValue()});
+            } else {
+                if (entry.getValue() > pq.peek()[1]) { //当前元素出现次数大于小顶堆的根结点(这k个元素中出现次数最少的那个)
+                    pq.poll(); //弹出队头(小顶堆的根结点),即把堆里出现次数最少的那个删除,留下的就是出现次数多的了
+                    pq.add(new int[]{entry.getKey(), entry.getValue()});
+                }
+            }
+        }
+        int[] ans = new int[k];
+        for (int i = k - 1; i >= 0; i--) { //依次弹出小顶堆,先弹出的是堆的根,出现次数少,后面弹出的出现次数多
+            ans[i] = pq.poll()[0];
+        }
+        return ans;
+    }
+}
+```
+
+# 二叉树
+
+## 二叉树的递归遍历
+
+```java
+// 前序遍历·递归·LC144_二叉树的前序遍历
+class Solution {
+    public List<Integer> preorderTraversal(TreeNode root) {
+        List<Integer> result = new ArrayList<Integer>();
+        preorder(root, result);
+        return result;
+    }
+
+    public void preorder(TreeNode root, List<Integer> result) {
+        if (root == null) {
+            return;
+        }
+        result.add(root.val);
+        preorder(root.left, result);
+        preorder(root.right, result);
+    }
+}
+// 中序遍历·递归·LC94_二叉树的中序遍历
+class Solution {
+    public List<Integer> inorderTraversal(TreeNode root) {
+        List<Integer> res = new ArrayList<>();
+        inorder(root, res);
+        return res;
+    }
+
+    void inorder(TreeNode root, List<Integer> list) {
+        if (root == null) {
+            return;
+        }
+        inorder(root.left, list);
+        list.add(root.val);             // 注意这一句
+        inorder(root.right, list);
+    }
+}
+// 后序遍历·递归·LC145_二叉树的后序遍历
+class Solution {
+    public List<Integer> postorderTraversal(TreeNode root) {
+        List<Integer> res = new ArrayList<>();
+        postorder(root, res);
+        return res;
+    }
+
+    void postorder(TreeNode root, List<Integer> list) {
+        if (root == null) {
+            return;
+        }
+        postorder(root.left, list);
+        postorder(root.right, list);
+        list.add(root.val);             // 注意这一句
+    }
+}
+```
+
+## 二叉树的迭代遍历
+
+```java
+// 前序遍历顺序：中-左-右，入栈顺序：中-右-左
+class Solution {
+    public List<Integer> preorderTraversal(TreeNode root) {
+        List<Integer> result = new ArrayList<>();
+        if (root == null){
+            return result;
+        }
+        Stack<TreeNode> stack = new Stack<>();
+        stack.push(root);
+        while (!stack.isEmpty()){
+            TreeNode node = stack.pop();
+            result.add(node.val);
+            if (node.right != null){
+                stack.push(node.right);
+            }
+            if (node.left != null){
+                stack.push(node.left);
+            }
+        }
+        return result;
+    }
+}
+
+// 中序遍历顺序: 左-中-右 入栈顺序： 左-右
+//初始状态：从根节点 root 开始，使用 cur 指针遍历树。
+//向左遍历：将当前节点压入栈中，然后继续遍历其左子节点，直到找到最左下的节点（即没有左子节点的节点）。
+//处理节点：当无法继续向左时（cur 为 NULL），开始处理栈顶元素，这个栈顶元素就是当前子树的根节点。
+//访问右子树：将栈顶元素的值加入结果数组 result 中，然后转向其右子节点，继续上述过程。
+class Solution {
+    public List<Integer> inorderTraversal(TreeNode root) {
+        List<Integer> result = new ArrayList<>();
+        if (root == null){
+            return result;
+        }
+        Stack<TreeNode> stack = new Stack<>();
+        TreeNode cur = root;
+        while (cur != null || !stack.isEmpty()){
+        //!st.empty(): 当 cur 为 NULL 时，说明已经到达左子树的最左边（即当前节点没有左子节点）。此时，我们不能再继续向左移动，但我们还需要处理前面存入栈中的节点（即之前访问的节点及其右子树）。因此，!st.empty() 判断栈是否为空。如果栈不为空，说明还有尚未处理的节点（即它们的右子树还没有访问过），循环应该继续，以便处理这些节点。
+           if (cur != null){
+               stack.push(cur);
+               cur = cur.left;
+           }else{
+               cur = stack.pop();
+               result.add(cur.val);
+               cur = cur.right;
+           }
+        }
+        return result;
+    }
+}
+
+// 后序遍历顺序 左-右-中 入栈顺序：中-左-右 出栈顺序：中-右-左， 最后翻转结果
+class Solution {
+    public List<Integer> postorderTraversal(TreeNode root) {
+        List<Integer> result = new ArrayList<>();
+        if (root == null){
+            return result;
+        }
+        Stack<TreeNode> stack = new Stack<>();
+        stack.push(root);
+        while (!stack.isEmpty()){
+            TreeNode node = stack.pop();
+            result.add(node.val);
+            if (node.left != null){
+                stack.push(node.left);
+            }
+            if (node.right != null){
+                stack.push(node.right);
+            }
+        }
+        Collections.reverse(result);
+        return result;
+    }
+}
+```
+
+# 二叉树的层序遍历
+
+## 二叉树的层序遍历
+
+使用队列来进行层序遍历，注意层序遍历用的是队列进行，而栈是将递归遍历转变为了迭代遍历因此不同
+
+```java
+// 102.二叉树的层序遍历
+class Solution {
+    public List<List<Integer>> resList = new ArrayList<List<Integer>>();
+
+    public List<List<Integer>> levelOrder(TreeNode root) {
+        //checkFun01(root,0);
+        checkFun02(root);
+
+        return resList;
+    }
+
+    //BFS--递归方式
+    public void checkFun01(TreeNode node, Integer deep) {
+        if (node == null) return;
+        deep++;
+
+        if (resList.size() < deep) {
+            //当层级增加时，list的Item也增加，利用list的索引值进行层级界定
+            List<Integer> item = new ArrayList<Integer>();
+            resList.add(item);
+        }
+        resList.get(deep - 1).add(node.val);
+
+        checkFun01(node.left, deep);
+        checkFun01(node.right, deep);
+    }
+
+    //BFS--迭代方式--借助队列
+    public void checkFun02(TreeNode node) {
+        if (node == null) return;
+        Queue<TreeNode> que = new LinkedList<TreeNode>();
+        que.offer(node);
+
+        while (!que.isEmpty()) {
+            List<Integer> itemList = new ArrayList<Integer>();
+            int len = que.size();
+
+            while (len > 0) {
+                TreeNode tmpNode = que.poll();
+                itemList.add(tmpNode.val);
+
+                if (tmpNode.left != null) que.offer(tmpNode.left);
+                if (tmpNode.right != null) que.offer(tmpNode.right);
+                len--;
+            }
+
+            resList.add(itemList);
+        }
+
+    }
+}
+```
+
+## 二叉树层序遍历II
+
+返回节点值自底而上的层次遍历，相对于普通层次遍历将其result数组进行反转即可
+
+```java
+// 107. 二叉树的层序遍历 II
+public class N0107 {
+
+    /**
+     * 解法：队列，迭代。
+     * 层序遍历，再翻转数组即可。
+     */
+    public List<List<Integer>> solution1(TreeNode root) {
+        List<List<Integer>> list = new ArrayList<>();
+        Deque<TreeNode> que = new LinkedList<>();
+
+        if (root == null) {
+            return list;
+        }
+
+        que.offerLast(root);
+        while (!que.isEmpty()) {
+            List<Integer> levelList = new ArrayList<>();
+
+            int levelSize = que.size();
+            for (int i = 0; i < levelSize; i++) {
+                TreeNode peek = que.peekFirst();
+                levelList.add(que.pollFirst().val);
+
+                if (peek.left != null) {
+                    que.offerLast(peek.left);
+                }
+                if (peek.right != null) {
+                    que.offerLast(peek.right);
+                }
+            }
+            list.add(levelList);
+        }
+
+        List<List<Integer>> result = new ArrayList<>();
+        for (int i = list.size() - 1; i >= 0; i-- ) {
+            result.add(list.get(i));
+        }
+
+        return result;
+    }
+}
+```
+
+## 二叉树的右视图
+
+给定一棵二叉树，想象自己站在它的右侧，按照从顶部到底部的顺序，返回从右侧所能看到的节点值。层序遍历的时候，判断是否遍历到单层的最后面的元素，如果是，就放进result数组中，随后返回result就可以了。
+
+```java
+// 199.二叉树的右视图
+public class N0199 {
+    /**
+     * 解法：队列，迭代。
+     * 每次返回每层的最后一个字段即可。
+     *
+     * 小优化：每层右孩子先入队。代码略。
+     */
+    public List<Integer> rightSideView(TreeNode root) {
+        List<Integer> list = new ArrayList<>();
+        Deque<TreeNode> que = new LinkedList<>();
+
+        if (root == null) {
+            return list;
+        }
+
+        que.offerLast(root);
+        while (!que.isEmpty()) {
+            int levelSize = que.size();
+
+            for (int i = 0; i < levelSize; i++) {
+                TreeNode poll = que.pollFirst();
+
+                if (poll.left != null) {
+                    que.addLast(poll.left);
+                }
+                if (poll.right != null) {
+                    que.addLast(poll.right);
+                }
+
+                if (i == levelSize - 1) {
+                    list.add(poll.val);
+                }
+            }
+        }
+
+        return list;
+    }
+}
+```
+
+## 二叉树的层平均值
+
+给定一个非空二叉树, 返回一个由每层节点平均值组成的数组。
+
+```java
+// 637. 二叉树的层平均值
+public class N0637 {
+
+    /**
+     * 解法：队列，迭代。
+     * 每次返回每层的最后一个字段即可。
+     */
+    public List<Double> averageOfLevels(TreeNode root) {
+        List<Double> list = new ArrayList<>();
+        Deque<TreeNode> que = new LinkedList<>();
+
+        if (root == null) {
+            return list;
+        }
+
+        que.offerLast(root);
+        while (!que.isEmpty()) {
+
+            int levelSize = que.size();
+            double levelSum = 0.0;
+            for (int i = 0; i < levelSize; i++) {
+                TreeNode poll = que.pollFirst();
+
+                levelSum += poll.val;
+
+                if (poll.left != null) {
+                    que.addLast(poll.left);
+                }
+                if (poll.right != null) {
+                    que.addLast(poll.right);
+                }
+            }
+            list.add(levelSum / levelSize);
+        }
+        return list;
+    }
+}
+```
+
+## 429.N叉树的层序遍历
+
+给定一个 N 叉树，返回其节点值的层序遍历。 (即从左到右，逐层遍历)。
+
+```java
+// 429. N 叉树的层序遍历
+public class N0429 {
+    /**
+     * 解法1：队列，迭代。
+     */
+    public List<List<Integer>> levelOrder(Node root) {
+        List<List<Integer>> list = new ArrayList<>();
+        Deque<Node> que = new LinkedList<>();
+
+        if (root == null) {
+            return list;
+        }
+
+        que.offerLast(root);
+        while (!que.isEmpty()) {
+            int levelSize = que.size();
+            List<Integer> levelList = new ArrayList<>();
+
+            for (int i = 0; i < levelSize; i++) {
+                Node poll = que.pollFirst();
+
+                levelList.add(poll.val);
+
+                List<Node> children = poll.children;
+                if (children == null || children.size() == 0) {
+                    continue;
+                }
+                for (Node child : children) {
+                    if (child != null) {
+                        que.offerLast(child);
+                    }
+                }
+            }
+            list.add(levelList);
+        }
+
+        return list;
+    }
+
+    class Node {
+        public int val;
+        public List<Node> children;
+
+        public Node() {}
+
+        public Node(int _val) {
+            val = _val;
+        }
+
+        public Node(int _val, List<Node> _children) {
+            val = _val;
+            children = _children;
+        }
+    }
+}
+```
+
+## 在每个树行中找最大值
+
+层序遍历，取每一层的最大值
+
+```java
+class Solution {
+    public List<Integer> largestValues(TreeNode root) {
+        if(root == null){
+            return Collections.emptyList();
+        }
+        List<Integer> result = new ArrayList();
+        Queue<TreeNode> queue = new LinkedList();
+        queue.offer(root);
+        while(!queue.isEmpty()){
+            int max = Integer.MIN_VALUE;
+            for(int i = queue.size(); i > 0; i--){
+               TreeNode node = queue.poll();
+               max = Math.max(max, node.val);
+               if(node.left != null) queue.offer(node.left);
+               if(node.right != null) queue.offer(node.right);
+            }
+            result.add(max);
+        }
+        return result;
+    }
+}
+```
+
+## 填充每个节点的下一个右侧节点指针
+
+本题依然是层序遍历，只不过在单层遍历的时候记录一下本层的头部节点，然后在遍历的时候让前一个节点指向本节点就可以了
+
+```java
+class Solution {
+    public Node connect(Node root) {
+	Queue<Node> tmpQueue = new LinkedList<Node>();
+	if (root != null) tmpQueue.add(root);
+
+	while (tmpQueue.size() != 0){
+	    int size = tmpQueue.size();
+
+            Node cur = tmpQueue.poll();
+            if (cur.left != null) tmpQueue.add(cur.left);
+            if (cur.right != null) tmpQueue.add(cur.right);
+
+	    for (int index = 1; index < size; index++){
+		Node next = tmpQueue.poll();
+		if (next.left != null) tmpQueue.add(next.left);
+		if (next.right != null) tmpQueue.add(next.right);
+
+                cur.next = next;
+                cur = next;
+	    }
+	}
+
+        return root;
+    }
+}
+```
+
+## 填充每个节点的下一个右侧节点指针II
+
+```java
+// 二叉树之层次遍历
+class Solution {
+    public Node connect(Node root) {
+        Queue<Node> queue = new LinkedList<>();
+        if (root != null) {
+            queue.add(root);
+        }
+        while (!queue.isEmpty()) {
+            int size = queue.size();
+            Node node = null;
+            Node nodePre = null;
+
+            for (int i = 0; i < size; i++) {
+                if (i == 0) {
+                    nodePre = queue.poll(); // 取出本层头一个节点
+                    node = nodePre;
+                } else {
+                    node = queue.poll();
+                    nodePre.next = node; // 本层前一个节点 next 指向当前节点
+                    nodePre = nodePre.next;
+                }
+                if (node.left != null) {
+                    queue.add(node.left);
+                }
+                if (node.right != null) {
+                    queue.add(node.right);
+                }
+            }
+            nodePre.next = null; // 本层最后一个节点 next 指向 null
+        }
+        return root;
+    }
+}
+```
+
+## 二叉树的最大深度
+
+二叉树的深度为根节点到最远叶子节点的最长路径上的节点数。
+
+```java
+class Solution {
+    public int maxDepth(TreeNode root) {
+        if (root == null)   return 0;
+        Queue<TreeNode> que = new LinkedList<>();
+        que.offer(root);
+        int depth = 0;
+        while (!que.isEmpty())
+        {
+            int len = que.size();
+            while (len > 0)
+            {
+                TreeNode node = que.poll();
+                if (node.left != null)  que.offer(node.left);
+                if (node.right != null) que.offer(node.right);
+                len--;
+            }
+            depth++;
+        }
+        return depth;
+    }
+}
+```
+
+## 二叉树的最小深度
+
+```java
+class Solution {
+    public int minDepth(TreeNode root){
+        if (root == null) {
+            return 0;
+        }
+        Queue<TreeNode> queue = new LinkedList<>();
+        queue.offer(root);
+        int depth = 0;
+        while (!queue.isEmpty()){
+            int size = queue.size();
+            depth++;
+            TreeNode cur = null;
+            for (int i = 0; i < size; i++) {
+                cur = queue.poll();
+                //如果当前节点的左右孩子都为空，直接返回最小深度
+                if (cur.left == null && cur.right == null){
+                    return depth;
+                }
+                if (cur.left != null) queue.offer(cur.left);
+                if (cur.right != null) queue.offer(cur.right);
+            }
+        }
+        return depth;
+    }
+}
+```
+
+## 翻转二叉树
+
+![226.翻转二叉树1](https://code-thinking-1253855093.file.myqcloud.com/pics/20210203192724351.png)
+
+```java
+//DFS递归
+class Solution {
+   /**
+     * 前后序遍历都可以
+     * 中序不行，因为先左孩子交换孩子，再根交换孩子（做完后，右孩子已经变成了原来的左孩子），再右孩子交换孩子（此时其实是对原来的左孩子做交换）
+     */
+    public TreeNode invertTree(TreeNode root) {
+        if (root == null) {
+            return null;
+        }
+        invertTree(root.left);
+        invertTree(root.right);
+        swapChildren(root);
+        return root;
+    }
+
+    private void swapChildren(TreeNode root) {
+        TreeNode tmp = root.left;
+        root.left = root.right;
+        root.right = tmp;
+    }
+}
+
+//BFS
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        if (root == null) {return null;}
+        ArrayDeque<TreeNode> deque = new ArrayDeque<>();
+        deque.offer(root);
+        while (!deque.isEmpty()) {
+            int size = deque.size();
+            while (size-- > 0) {
+                TreeNode node = deque.poll();
+                swap(node);
+                if (node.left != null) deque.offer(node.left);
+                if (node.right != null) deque.offer(node.right);
+            }
+        }
+        return root;
+    }
+
+    public void swap(TreeNode root) {
+        TreeNode temp = root.left;
+        root.left = root.right;
+        root.right = temp;
+    }
+}
+```
+
+## 对称二叉树
+
+给定一个二叉树，检查它是否是镜像对称的。
+
+递归三部曲
+
+1. 确定递归函数的参数和返回值
+
+   因为我们要比较的是根节点的两个子树是否是相互翻转的，进而判断这个树是不是对称树，所以要比较的是两个树，参数自然也是左子树节点和右子树节点。
+
+2. 确定终止条件
+
+   要比较两个节点数值相不相同，首先要把两个节点为空的情况弄清楚！否则后面比较数值的时候就会操作空指针了。
+
+   节点为空的情况有：（**注意我们比较的其实不是左孩子和右孩子，所以如下我称之为左节点右节点**）
+
+   - 左节点为空，右节点不为空，不对称，return false
+   - 左不为空，右为空，不对称 return false
+   - 左右都为空，对称，返回true
+
+   此时已经排除掉了节点为空的情况，那么剩下的就是左右节点不为空：
+
+   - 左右都不为空，比较节点数值，不相同就return false
+
+   此时左右节点不为空，且数值也不相同的情况我们也处理了。
+
+3. 确定单层递归的逻辑
+
+   此时才进入单层递归的逻辑，单层递归的逻辑就是处理 左右节点都不为空，且数值相同的情况。
+
+   - 比较二叉树外侧是否对称：传入的是左节点的左孩子，右节点的右孩子。
+   - 比较内侧是否对称，传入左节点的右孩子，右节点的左孩子。
+   - 如果左右都对称就返回true ，有一侧不对称就返回false 。
+
+```java
+    /**
+     * 递归法
+     */
+    public boolean isSymmetric1(TreeNode root) {
+        return compare(root.left, root.right);
+    }
+
+    private boolean compare(TreeNode left, TreeNode right) {
+
+        if (left == null && right != null) {
+            return false;
+        }
+        if (left != null && right == null) {
+            return false;
+        }
+
+        if (left == null && right == null) {
+            return true;
+        }
+        if (left.val != right.val) {
+            return false;
+        }
+        // 比较外侧
+        boolean compareOutside = compare(left.left, right.right);
+        // 比较内侧
+        boolean compareInside = compare(left.right, right.left);
+        return compareOutside && compareInside;
+    }
+
+    /**
+     * 迭代法
+     * 使用双端队列，相当于两个栈
+     */
+    public boolean isSymmetric2(TreeNode root) {
+        Deque<TreeNode> deque = new LinkedList<>();
+        deque.offerFirst(root.left);
+        deque.offerLast(root.right);
+        while (!deque.isEmpty()) {
+            TreeNode leftNode = deque.pollFirst();
+            TreeNode rightNode = deque.pollLast();
+            if (leftNode == null && rightNode == null) {
+                continue;
+            }
+//            if (leftNode == null && rightNode != null) {
+//                return false;
+//            }
+//            if (leftNode != null && rightNode == null) {
+//                return false;
+//            }
+//            if (leftNode.val != rightNode.val) {
+//                return false;
+//            }
+            // 以上三个判断条件合并
+            if (leftNode == null || rightNode == null || leftNode.val != rightNode.val) {
+                return false;
+            }
+            deque.offerFirst(leftNode.left);
+            deque.offerFirst(leftNode.right);
+            deque.offerLast(rightNode.right);
+            deque.offerLast(rightNode.left);
+        }
+        return true;
+    }
+
+    /**
+     * 迭代法
+     * 使用普通队列
+     */
+    public boolean isSymmetric3(TreeNode root) {
+        Queue<TreeNode> deque = new LinkedList<>();
+        deque.offer(root.left);
+        deque.offer(root.right);
+        while (!deque.isEmpty()) {
+            TreeNode leftNode = deque.poll();
+            TreeNode rightNode = deque.poll();
+            if (leftNode == null && rightNode == null) {
+                continue;
+            }
+//            if (leftNode == null && rightNode != null) {
+//                return false;
+//            }
+//            if (leftNode != null && rightNode == null) {
+//                return false;
+//            }
+//            if (leftNode.val != rightNode.val) {
+//                return false;
+//            }
+            // 以上三个判断条件合并
+            if (leftNode == null || rightNode == null || leftNode.val != rightNode.val) {
+                return false;
+            }
+            // 这里顺序与使用Deque不同
+            deque.offer(leftNode.left);
+            deque.offer(rightNode.right);
+            deque.offer(leftNode.right);
+            deque.offer(rightNode.left);
+        }
+        return true;
+    }
+```
+
+## 二叉树的最大深度
+
+```java
+class Solution {
+    /**
+     * 递归法
+     */
+    public int maxDepth(TreeNode root) {
+        if (root == null) {
+            return 0;
+        }
+        int leftDepth = maxDepth(root.left);
+        int rightDepth = maxDepth(root.right);
+        return Math.max(leftDepth, rightDepth) + 1;
+    }
+}
+```
+
+```java
+class Solution {
+  /**
+   * 递归法(求深度法)
+   */
+    //定义最大深度
+    int maxnum = 0;
+
+    public int maxDepth(TreeNode root) {
+        ans(root,0);
+        return maxnum;
+    }
+    
+    //递归求解最大深度
+    void ans(TreeNode tr,int tmp){
+        if(tr==null) return;
+        tmp++;
+        maxnum = maxnum<tmp?tmp:maxnum;
+        ans(tr.left,tmp);
+        ans(tr.right,tmp);
+        tmp--;
+    }
+}
+```
+
+```java
+class Solution {
+    /**
+     * 迭代法，使用层序遍历
+     */
+    public int maxDepth(TreeNode root) {
+        if(root == null) {
+            return 0;
+        }
+        Deque<TreeNode> deque = new LinkedList<>();
+        deque.offer(root);
+        int depth = 0;
+        while (!deque.isEmpty()) {
+            int size = deque.size();
+            depth++;
+            for (int i = 0; i < size; i++) {
+                TreeNode node = deque.poll();
+                if (node.left != null) {
+                    deque.offer(node.left);
+                }
+                if (node.right != null) {
+                    deque.offer(node.right);
+                }
+            }
+        }
+        return depth;
+    }
+}
+```
+
+## n叉树的最大深度
+
+```java
+class Solution {
+    /*递归法，后序遍历求root节点的高度*/
+    public int maxDepth(Node root) {
+        if (root == null) return 0;
+
+        int depth = 0;
+        if (root.children != null){
+            for (Node child : root.children){
+                depth = Math.max(depth, maxDepth(child));
+            }
+        }
+
+        return depth + 1; //中节点
+    }  
+}
+```
+
+```java
+class Solution {
+    /**
+     * 迭代法，使用层序遍历
+     */
+    public int maxDepth(Node root) {
+        if (root == null)   return 0;
+        int depth = 0;
+        Queue<Node> que = new LinkedList<>();
+        que.offer(root);
+        while (!que.isEmpty())
+        {
+            depth ++;
+            int len = que.size();
+            while (len > 0)
+            {
+                Node node = que.poll();
+                for (int i = 0; i < node.children.size(); i++)
+                    if (node.children.get(i) != null) 
+                        que.offer(node.children.get(i));
+                len--;
+            }
+        }
+        return depth;
+    }
+}
+```
+
+## 二叉树的最小深度
+
+```java
+class Solution {
+    /**
+     * 递归法，相比求MaxDepth要复杂点
+     * 因为最小深度是从根节点到最近**叶子节点**的最短路径上的节点数量
+     */
+    public int minDepth(TreeNode root) {
+        if (root == null) {
+            return 0;
+        }
+        int leftDepth = minDepth(root.left);
+        int rightDepth = minDepth(root.right);
+        if (root.left == null) {
+            return rightDepth + 1;
+        }
+        if (root.right == null) {
+            return leftDepth + 1;
+        }
+        // 左右结点都不为null
+        return Math.min(leftDepth, rightDepth) + 1;
+    }
+}
+```
+
+```java
+class Solution {
+    /**
+     * 递归法（思路来自二叉树最大深度的递归法）
+     * 该题求最小深度，最小深度为根节点到叶子节点的深度，所以在迭代到每个叶子节点时更新最小值。
+     */
+    int depth = 0;
+    // 定义最小深度，初始化最大值
+    int minDepth = Integer.MAX_VALUE;
+    public int minDepth(TreeNode root) {
+        dep(root);
+        return minDepth == Integer.MAX_VALUE ? 0 : minDepth;
+    }
+    void dep(TreeNode root){
+        if(root == null) return ;
+        // 递归开始，深度增加
+        depth++;
+        dep(root.left);
+        dep(root.right);
+        // 该位置表示递归到叶子节点了，需要更新最小深度minDepth
+        if(root.left == null && root.right == null)
+            minDepth = Math.min(minDepth , depth);
+        // 递归结束，深度减小
+        depth--;
+    }
+}
+```
+
+```java
+class Solution {
+   /**
+     * 迭代法，层序遍历
+     */
+    public int minDepth(TreeNode root) {
+        if (root == null) {
+            return 0;
+        }
+        Deque<TreeNode> deque = new LinkedList<>();
+        deque.offer(root);
+        int depth = 0;
+        while (!deque.isEmpty()) {
+            int size = deque.size();
+            depth++;
+            for (int i = 0; i < size; i++) {
+                TreeNode poll = deque.poll();
+                if (poll.left == null && poll.right == null) {
+                    // 是叶子结点，直接返回depth，因为从上往下遍历，所以该值就是最小值
+                    return depth;
+                }
+                if (poll.left != null) {
+                    deque.offer(poll.left);
+                }
+                if (poll.right != null) {
+                    deque.offer(poll.right);
+                }
+            }
+        }
+        return depth;
+    }
+}
+```
